# tum_nlp-projektwoche

./: .gitignore  README.md  audio_playground.ipynb  music_sfx_playground.ipynb  prelim_assignment.ipynb  pyproject.toml  speech_playground.ipynb  technical_metadata_gen.ipynb  video_playground.ipynb
.ipynb_checkpoints/: audio_playground-checkpoint.ipynb  test_transcript-checkpoint.ipynb
Dialogue_Narration_to_Audio/: TTS_ElevenLabs.ipynb
assets/: parsed_scenes.py
assets/scripts/: fantasy_script.md  romance_script.md
data/: mtgc.csv
scripts/: fantasy_script.md  thriller_script.md
src/tum_nlp_projektwoche/: extract_audio.py  trailers_sampling.py
src/tum_nlp_projektwoche/utils/: music_sfx_helpers.py
