[project]
name = "tum_nlp-projektwoche"
version = "0.1.0"
description = "Repository contains codes for assignments in NLP Projektwoche lecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "yt-dlp[default]>=2025.5.22",
]
