[project]
name = "tum_nlp-projektwoche"
version = "0.1.0"
description = "Repository contains codes for assignments in NLP Projektwoche lecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "yt-dlp[default]>=2025.5.22",
    "moviepy>=2.2.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "proglog>=0.1.12",
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
]
